
       Canon MX520 series (EXPERIMENTAL)
       Canon PIXMA MX521  (EXPERIMENTAL)
       Canon PIXMA MX522  (EXPERIMENTAL)
       Canon PIXUS MX523  (EXPERIMENTAL)
       Canon PIXMA MX524  (EXPERIMENTAL)
       Canon PIXMA MX525  (EXPERIMENTAL)
       Canon PIXMA MX526  (EXPERIMENTAL)
       Canon PIXMA MX527  (EXPERIMENTAL)
       Canon PIXMA MX528  (EXPERIMENTAL)

       Canon MX920 series (EXPERIMENTAL)
       Canon PIXMA MX922  (EXPERIMENTAL)
       Canon PIXUS MX923  (EXPERIMENTAL)
       Canon PIXMA MX924  (EXPERIMENTAL)
       Canon PIXMA MX925  (EXPERIMENTAL)
       Canon PIXMA MX926  (EXPERIMENTAL)
       Canon PIXMA MX927  (EXPERIMENTAL)
       Canon PIXMA MX928  (EXPERIMENTAL)

       Note: Area codes as follows:
             1: Latin America
             2: USA
             3: Japan
             4: Europe/Africa
             5: UK
             6: Australia/New Zealand
             7: India/South Asia
             8: China
             (for MG series includes a trailing 0)

     - Canon dye-sublimation printers:

       Canon SELPHY CP810
       Canon SELPHY CP900

       Added back after removal in 5.2.9 release:

       Canon SELPHY CP600 *1
       Canon SELPHY CP720 
       Canon SELPHY CP780 (including improved support)
       Canon SELPHY CP800
       Canon SELPHY ES1
       Canon SELPHY ES2
       Canon SELPHY ES3
       Canon SELPHY ES20 *1
       Canon SELPHY ES30
       Canon SELPHY ES40

       Improved support:

       Canon CP-220       *1
       Canon SELPHY CP520 *1
       Canon SELPHY CP530 *1
       Canon SELPHY CP740
       Canon SELPHY CP750
       Canon SELPHY CP760
       Canon SELPHY CP770

       The intelligent CUPS spooler required to support the 
       SELPHY CP and ES models is now part of the gutenprint package.
       The USB PIDs for the following two SELPHY CP series models
       are still missing, and therefore unsupported in the spooler:

       Canon SELPHY CP520
       Canon SELPHY CP790
