@@ -9169,6 +9169,77 @@ static const canon_modeuse_t canon_MULTIPASS_MX710_modeuses[] = {
 
 DECLARE_MODEUSES(canon_MULTIPASS_MX710);
 
+/* ----------------------------------- Canon MX720  ----------------------------------- */
+static const char* canon_PIXMA_MX720_modeuses_plain[] = {
+  "600x600dpi_high",
+  "600x600dpi_high2",/* duplex */
+  "600x600dpi",
+  "600x600dpi_std2",/*duplex*/
+  "300x300dpi",
+  NULL
+};
+
+static const char* canon_PIXMA_MX720_modeuses_PPplusG2[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo",
+  NULL
+};
+
+/* highest mode still unsupported */
+static const char* canon_PIXMA_MX720_modeuses_PPpro[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo",
+  NULL
+};
+
+static const char* canon_PIXMA_MX720_modeuses_PPmatte[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo2",
+  NULL
+};
+
+static const char* canon_PIXMA_MX720_modeuses_Hagaki[] = {
+  "600x600dpi_high3",
+  "600x600dpi_std3",
+  NULL
+};
+
+static const char* canon_PIXMA_MX720_modeuses_inkjetHagaki[] = {
+  "600x600dpi_photohigh2",
+  "600x600dpi_photo3",
+  NULL
+};
+
+static const char* canon_PIXMA_MX720_modeuses_TShirt[] = {
+  "600x600dpi_photohigh",
+  NULL
+};
+
+static const char* canon_PIXMA_MX720_modeuses_PPother[] = {
+  "600x600dpi_photo",
+  NULL
+};
+
+static const canon_modeuse_t canon_PIXMA_MX720_modeuses[] = {
+  { "Plain",            canon_PIXMA_MX720_modeuses_plain, DUPLEX_SUPPORT | DUPLEX_MODEREPL },
+  { "PhotoPlusGloss2",  canon_PIXMA_MX720_modeuses_PPplusG2, 0 },
+  { "PhotoProPlat",     canon_PIXMA_MX720_modeuses_PPpro, 0 },
+  { "PhotoProLuster",   canon_PIXMA_MX720_modeuses_PPplusG2, 0 },
+  { "PhotoProSemiGloss",canon_PIXMA_MX720_modeuses_PPplusG2, 0 },
+  { "PhotopaperMatte",	canon_PIXMA_MX720_modeuses_PPmatte, 0 },
+  { "GlossyPaper",	canon_PIXMA_MX720_modeuses_PPplusG2, 0 },
+  { "Coated",		canon_PIXMA_MX720_modeuses_PPmatte, 0 },
+  { "HagakiA", 	        canon_PIXMA_MX720_modeuses_Hagaki, DUPLEX_SUPPORT },
+  { "InkJetHagaki", 	canon_PIXMA_MX720_modeuses_inkjetHagaki, 0 },
+  { "CanonPhotoHagakiK",canon_PIXMA_MX720_modeuses_PPplusG2, 0 },
+  { "Hagaki", 	        canon_PIXMA_MX720_modeuses_Hagaki, DUPLEX_SUPPORT },
+  { "TShirt",		canon_PIXMA_MX720_modeuses_TShirt, 0 },
+  { "Envelope",		canon_PIXMA_MX720_modeuses_Hagaki, 0 }, 
+  { "PhotopaperOther",	canon_PIXMA_MX720_modeuses_PPother, 0 },
+};
+
+DECLARE_MODEUSES(canon_PIXMA_MX720);
+
 /* ----------------------------------- Canon MX850  ----------------------------------- */
 static const char* canon_MULTIPASS_MX850_modeuses_plain[] = {
   "600x600dpi_high",
@@ -9467,6 +9538,85 @@ static const canon_modeuse_t canon_MULTIPASS_MX880_modeuses[] = {
 };
 
 DECLARE_MODEUSES(canon_MULTIPASS_MX880);
+
+/* ----------------------------------- Canon MX920  ----------------------------------- */
+static const char* canon_PIXMA_MX920_modeuses_plain[] = {
+  "600x600dpi_high",
+  "600x600dpi_high2",/* duplex */
+  "600x600dpi",
+  "600x600dpi_std2",/*duplex*/
+  "300x300dpi",
+  NULL
+};
+
+static const char* canon_PIXMA_MX920_modeuses_PPplusG2[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo",
+  NULL
+};
+
+/* highest mode still unsupported */
+static const char* canon_PIXMA_MX920_modeuses_PPpro[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo",
+  NULL
+};
+
+static const char* canon_PIXMA_MX920_modeuses_PPmatte[] = {
+  "600x600dpi_photohigh",
+  "600x600dpi_photo2",
+  NULL
+};
+
+static const char* canon_PIXMA_MX920_modeuses_Hagaki[] = {
+  "600x600dpi_high3",
+  "600x600dpi_std3",
+  NULL
+};
+
+static const char* canon_PIXMA_MX920_modeuses_inkjetHagaki[] = {
+  "600x600dpi_photohigh2",
+  "600x600dpi_photo3",
+  NULL
+};
+
+static const char* canon_PIXMA_MX920_modeuses_disc[] = {
+  "600x600dpi_photohigh2",
+  "600x600dpi_photo3",
+  NULL
+};
+
+static const char* canon_PIXMA_MX920_modeuses_TShirt[] = {
+  "600x600dpi_photohigh",
+  NULL
+};
+
+static const char* canon_PIXMA_MX920_modeuses_PPother[] = {
+  "600x600dpi_photo",
+  NULL
+};
+
+static const canon_modeuse_t canon_PIXMA_MX920_modeuses[] = {
+  { "Plain",            canon_PIXMA_MX920_modeuses_plain, DUPLEX_SUPPORT | DUPLEX_MODEREPL },
+  { "PhotoPlusGloss2",  canon_PIXMA_MX920_modeuses_PPplusG2, 0 },
+  { "PhotoProPlat",     canon_PIXMA_MX920_modeuses_PPpro, 0 },
+  { "PhotoProLuster",   canon_PIXMA_MX920_modeuses_PPplusG2, 0 },
+  { "PhotoProSemiGloss",canon_PIXMA_MX920_modeuses_PPplusG2, 0 },
+  { "PhotopaperMatte",	canon_PIXMA_MX920_modeuses_PPmatte, 0 },
+  { "GlossyPaper",	canon_PIXMA_MX920_modeuses_PPplusG2, 0 },
+  { "Coated",		canon_PIXMA_MX920_modeuses_PPmatte, 0 },
+  { "HagakiA", 	        canon_PIXMA_MX920_modeuses_Hagaki, DUPLEX_SUPPORT },
+  { "InkJetHagaki", 	canon_PIXMA_MX920_modeuses_inkjetHagaki, 0 },
+  { "CanonPhotoHagakiK",canon_PIXMA_MX920_modeuses_PPplusG2, 0 },
+  { "Hagaki", 	        canon_PIXMA_MX920_modeuses_Hagaki, DUPLEX_SUPPORT },
+  { "DiscCompat",	canon_PIXMA_MX920_modeuses_disc, 0 },
+  { "DiscOthers",	canon_PIXMA_MX920_modeuses_disc, 0 },
+  { "TShirt",		canon_PIXMA_MX920_modeuses_TShirt, 0 },
+  { "Envelope",		canon_PIXMA_MX920_modeuses_Hagaki, 0 }, 
+  { "PhotopaperOther",	canon_PIXMA_MX920_modeuses_PPother, 0 },
+};
+
+DECLARE_MODEUSES(canon_PIXMA_MX920);
 
 /* ----------------------------------- Canon MX7600  ----------------------------------- */
 static const char* canon_MULTIPASS_MX7600_modeuses_plain[] = {
