@@ -2909,6 +2909,22 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     iP4500_channel_order
   },
+  { /* Canon MULTIPASS MX720 --- with XML */
+    "PIXMA MX720", 3,          /*model, model_id*/
+    INCH(17/2), 1917,       /* max paper width and height */ /* no linux driver to check yet */
+    10, 10, 9, 15,    /*border_left, border_right, border_top, border_bottom */
+    &canon_PIXMA_MX720_slotlist,
+    CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_px|CANON_CAP_P|CANON_CAP_I|CANON_CAP_XML|CANON_CAP_BORDERLESS,0,
+    3,9, /* ESC (l and (P command lengths */
+    control_cmd_PIXMA_MG5300,
+    &canon_PIXMA_MX720_modelist,
+    &canon_PIXMA_MG3200_paperlist,
+    &canon_PIXMA_MX720_modeuselist,
+    NULL,
+    NULL,
+    NULL,
+    iP4500_channel_order
+  },
   { /* Canon MULTIPASS MX850 */
     "PIXMA MX850", 3,          /*model, model_id*/
     INCH(17/2), INCH(23),       /* max paper width and height */ /* from MacOSX driver */
@@ -2981,9 +2997,9 @@ static const canon_cap_t canon_model_capabilities[] =
     CANON_CAP_STD0|CANON_CAP_DUPLEX|CANON_CAP_r|CANON_CAP_px|CANON_CAP_P|CANON_CAP_I|CANON_CAP_XML|CANON_CAP_BORDERLESS,0,
     3,9, /* ESC (l and (P command lengths */
     control_cmd_PIXMA_MG5300,  /* features Uses ESC (r only for CD media */
-    &canon_PIXMA_iP7200_modelist,
+    &canon_PIXMA_MX920_modelist,
     &canon_PIXMA_MG5400_paperlist,
-    &canon_PIXMA_iP7200_modeuselist,
+    &canon_PIXMA_MX920_modeuselist,
     NULL,
     NULL,
     NULL,
